Refactor jfx configuration
* add test for javafx